--- a/timeeval_experiments/generator/templates/docker-algorithm.py.jinja
+++ b/timeeval_experiments/generator/templates/docker-algorithm.py.jinja
@@ -1,10 +1,9 @@
 from durations import Duration
-from sklearn.model_selection import ParameterGrid
 from typing import Any, Dict, Optional
 
 from timeeval import Algorithm, TrainingType, InputDimensionality
 from timeeval.adapters import DockerAdapter
-from timeeval.params import FullParameterGrid
+from timeeval.params import ParameterConfig, FullParameterGrid
 {% if post_process_block is defined %}
 
 import numpy as np
@@ -20,7 +19,7 @@ _{{ image_name }}_parameters: Dict[str, Dict[str, Any]] = {% if parameters is de
 {% endif %}
 
 
-def {{ image_name }}(params: Any = None, skip_pull: bool = {{ skip_pull }}, timeout: Optional[Duration] = None) -> Algorithm:
+def {{ image_name }}(params: ParameterConfig = None, skip_pull: bool = {{ skip_pull }}, timeout: Optional[Duration] = None) -> Algorithm:
     return Algorithm(
         name="{{ name }}",
         main=DockerAdapter(
@@ -41,7 +40,7 @@ def {{ image_name }}(params: Any = None, skip_pull: bool = {{ skip_pull }}, time
         preprocess={{ preprocess|default(None) }},
         postprocess={{ postprocess|default(None) }},
         params=_{{ image_name }}_parameters,
-        param_grid=FullParameterGrid(params or {}),
+        param_grid=params or FullParameterGrid({}),
         data_as_file=True,
         training_type={% if training_type|lower == "unsupervised" -%}
                           TrainingType.UNSUPERVISED
